<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:orientation="vertical"
    tools:context=".PremiereActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:drawableStart="@drawable/ic_launcher_foreground"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/accent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPermissions"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:text="@string/ui_accorder_permissions" />

        <Button
            android:id="@+id/bPermissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickAccorderPermissions"
            android:layout_marginTop="16dp"
            android:text="@string/btn_accorder_permissions"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/tvMotDePasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ui_choisir_mot_de_passe" />

        <Button
            android:id="@+id/bMotDePasse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onClickMotDePasse"
            android:text="@string/btn_choisir_mot_de_passe"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warning_prives"
            android:textColor="@color/accent" />

        <TextView
            android:id="@+id/tvMessageTermine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ui_lancer_appli_conf_terminee" />

        <Button
            android:id="@+id/bLancer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onClickLancerApplication"
            android:text="@string/btn_launch_application"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>