<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/warning"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/accent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning_prives" />

    <CheckBox
        android:id="@+id/cbNePlusAfficher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compris_ne_plus_afficher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@android:string/cancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnOk"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@android:string/ok"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>